--- a/bot/index.html
+++ b/bot/index.html
@@ -57,9 +57,9 @@
   <body>
     <h1>Formulaire de Recherche</h1>
     <form id="searchForm" novalidate>
-      <label for="adresse">Adresse :</label>
-      <input type="text" id="adresse" name="adresse" required />
-      <div class="error-message" id="adresse-error">Adresse invalide</div>
+      <label for="category">Catégorie :</label>
+      <input type="text" id="category" name="category" required />
+      <div class="error-message" id="category-error">Adresse invalide</div>
 
       <label for="codePostal">Code Postal :</label>
       <input type="text" id="codePostal" name="codePostal" required />
